--- a/harmony-bridge-simple/profiles/harmony-bridge-simple.v1.yaml
+++ b/harmony-bridge-simple/profiles/harmony-bridge-simple.v1.yaml
@@ -20,4 +20,4 @@ preferences:
       default: ""
 metadata:
   mnmn: SmartThingsCommunity
-  vid: "2e9ad144-9f9e-356e-8dc9-b97ec18bedb7"
+  vid: 2e9ad144-9f9e-356e-8dc9-b97ec18bedb7
