added basic activity devices

--- a/harmony-bridge-simple/profiles/harmony-bridge-simple.v1.yaml
+++ b/harmony-bridge-simple/profiles/harmony-bridge-simple.v1.yaml
@@ -62,5 +62,11 @@ preferences:
     preferenceType: boolean
     definition:
       default: true
+  - name: "activitydevices"
+    title: "Activity Devices Enabled?"
+    required: true
+    preferenceType: boolean
+    definition:
+      default: false
 
 
