fixed profile name

--- a/harmony-bridge-simple/profiles/harmony-bridge-activity.v1.yaml
+++ b/harmony-bridge-simple/profiles/harmony-bridge-activity.v1.yaml
@@ -1,5 +1,5 @@
-# harmony-bridge-simple
-name: harmony-bridge-simple.v1
+# harmony-bridge-activity
+name: harmony-bridge-activity.v1
 components:
 - id: main
   label: ActivityStatus
