--- a/harmony-bridge-simple/profiles/harmony-bridge-activity.v1.yaml
+++ b/harmony-bridge-simple/profiles/harmony-bridge-activity.v1.yaml
@@ -1,11 +1,18 @@
 # harmony-bridge-activity
 name: harmony-bridge-activity.v1
 components:
-- id: activityswitch
+- id: main
   label: ActivityStatus
   capabilities:
   - id: switch
     version: 1
+- id: activitylogger
+  label: main
+  capabilities:
+    version: 1
+  - id: universevoice35900.log
+    version: 1
+  categories:
   categories:
   - name: RemoteController
 metadata:
