--- a/harmony-bridge-simple/profiles/harmony-bridge-activity.v1.yaml
+++ b/harmony-bridge-simple/profiles/harmony-bridge-activity.v1.yaml
@@ -7,9 +7,8 @@ components:
   - id: switch
     version: 1
 - id: activitylogger
-  label: main
+  label: activitylogger
   capabilities:
-    version: 1
   - id: universevoice35900.log
     version: 1
   categories:
