added array of commands

--- a/harmony-bridge-simple/profiles/harmony-bridge-simple.v1.yaml
+++ b/harmony-bridge-simple/profiles/harmony-bridge-simple.v1.yaml
@@ -38,7 +38,7 @@ preferences:
     preferenceType: string
     definition:
       minLength: 7
-      stringType: text
+      stringType: paragraph
       default: "{put your harmony command here}"
   - title: "Additional Harmony Identifier"
     name: deviceid
