--- a/harmony-bridge-simple/profiles/harmony-bridge-remote.v1.yaml
+++ b/harmony-bridge-simple/profiles/harmony-bridge-remote.v1.yaml
@@ -9,7 +9,7 @@ components:
 - id: remotecontrol
   label: remotecontrol
   capabilities:
-  - id: samsungTV
+  - id: keypadInput
     version: 1
 - id: remotelogger
   label: remotelogger
