--- a/harmony-bridge-simple/profiles/harmony-bridge-remote.v1.yaml
+++ b/harmony-bridge-simple/profiles/harmony-bridge-remote.v1.yaml
@@ -6,10 +6,9 @@ components:
   capabilities:
   - id: switch
     version: 1
-- id: remotecontrol
-  label: remotecontrol
-  capabilities:
   - id: keypadInput
+    version: 1
+  - id: samsungTV
     version: 1
 - id: remotelogger
   label: remotelogger
