removed old ws libs

--- a/harmony-bridge-simple/profiles/harmony-bridge-simple.v1.yaml
+++ b/harmony-bridge-simple/profiles/harmony-bridge-simple.v1.yaml
@@ -15,6 +15,8 @@ components:
     version: 1
   - id: universevoice35900.log
     version: 1
+  - id: refresh
+    version: 1
   categories:
   - name: RemoteController
 metadata:
